Update notebooks with execution outputs

--- a/notebooks/debug_cssr_golden_mean.ipynb
+++ b/notebooks/debug_cssr_golden_mean.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "03377082",
    "metadata": {},
    "outputs": [],
@@ -46,21 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bc68f591",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data length: 10000\n",
-      "Symbol counts: 0=6644, 1=3356\n",
-      "First 50 symbols: [1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
-      "Consecutive 1s (should be 0): 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate Golden Mean data\n",
     "source = GoldenMeanSource(p=0.5, _seed=42)\n",
@@ -90,20 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5372df6f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Suffix tree built with max_history=3\n",
-      "Alphabet: frozenset({0, 1})\n",
-      "Number of histories: 11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build suffix tree with max_history=3\n",
     "max_history = 3\n",
@@ -118,57 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ec9f8f14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Suffix Tree Statistics ===\n",
-      "\n",
-      "Length 0 (empty history):\n",
-      "  (): count=19998, next_symbols={0: 13288, 1: 6710}\n",
-      "      P(0|()) = 0.6645\n",
-      "      P(1|()) = 0.3355\n",
-      "\n",
-      "Length 1 histories:\n",
-      "  (0,): count=6643, next_symbols={0: 3288, 1: 3355}\n",
-      "      P(0|(0,)) = 0.4950\n",
-      "      P(1|(0,)) = 0.5050\n",
-      "  (1,): count=3356, next_symbols={0: 3356}\n",
-      "      P(0|(1,)) = 1.0000\n",
-      "\n",
-      "Length 2 histories:\n",
-      "  (0, 0): count=3287, next_symbols={0: 1592, 1: 1695}\n",
-      "      P(0|(0, 0)) = 0.4843\n",
-      "      P(1|(0, 0)) = 0.5157\n",
-      "  (0, 1): count=3355, next_symbols={0: 3355}\n",
-      "      P(0|(0, 1)) = 1.0000\n",
-      "  (1, 0): count=3356, next_symbols={0: 1696, 1: 1660}\n",
-      "      P(0|(1, 0)) = 0.5054\n",
-      "      P(1|(1, 0)) = 0.4946\n",
-      "\n",
-      "Length 3 histories:\n",
-      "  (0, 0, 0): count=1592, next_symbols={0: 771, 1: 821}\n",
-      "      P(0|(0, 0, 0)) = 0.4843\n",
-      "      P(1|(0, 0, 0)) = 0.5157\n",
-      "  (0, 0, 1): count=1695, next_symbols={0: 1695}\n",
-      "      P(0|(0, 0, 1)) = 1.0000\n",
-      "  (0, 1, 0): count=3355, next_symbols={1: 1660, 0: 1695}\n",
-      "      P(1|(0, 1, 0)) = 0.4948\n",
-      "      P(0|(0, 1, 0)) = 0.5052\n",
-      "  (1, 0, 0): count=1695, next_symbols={0: 821, 1: 874}\n",
-      "      P(0|(1, 0, 0)) = 0.4844\n",
-      "      P(1|(1, 0, 0)) = 0.5156\n",
-      "  (1, 0, 1): count=1660, next_symbols={0: 1660}\n",
-      "      P(0|(1, 0, 1)) = 1.0000\n",
-      "\n",
-      "  (1,1): count=0 (forbidden - should be 0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Examine the suffix tree entries\n",
     "print(\"=== Suffix Tree Statistics ===\")\n",
@@ -229,30 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "90882e91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Histories Ending in 0 (should all have ~50/50 distribution) ===\n",
-      "  (0,): P(0)=0.4950, P(1)=0.5050\n",
-      "  (1, 0): P(0)=0.5054, P(1)=0.4946\n",
-      "  (0, 0): P(0)=0.4843, P(1)=0.5157\n",
-      "  (0, 1, 0): P(0)=0.5052, P(1)=0.4948\n",
-      "  (1, 0, 0): P(0)=0.4844, P(1)=0.5156\n",
-      "  (0, 0, 0): P(0)=0.4843, P(1)=0.5157\n",
-      "\n",
-      "=== Histories Ending in 1 (should all have 100% → 0) ===\n",
-      "  (1,): P(0)=1.0000, P(1)=0.0000\n",
-      "  (0, 1): P(0)=1.0000, P(1)=0.0000\n",
-      "  (1, 0, 1): P(0)=1.0000, P(1)=0.0000\n",
-      "  (0, 0, 1): P(0)=1.0000, P(1)=0.0000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Categorize histories by their predictive distribution\n",
     "def get_distribution(tree, suffix):\n",
@@ -291,21 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6707b32a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== CSSR Algorithm Trace ===\n",
-      "\n",
-      "After initialization: 1 states\n",
-      "  S0: [(0,), (1,), (0, 0), (0, 1), (1, 0), (0, 0, 0), (0, 0, 1), (0, 1, 0), (1, 0, 0), (1, 0, 1)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run CSSR with our configuration\n",
     "from emic.inference import CSSRConfig\n",
@@ -336,21 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8ad3a6b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "After splitting: 2 states\n",
-      "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split states\n",
     "partition = cssr._split_states(partition, tree2)\n",
@@ -359,21 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f2beffa9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "After merging: 2 states\n",
-      "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Merge states\n",
     "partition = cssr._merge_states(partition, tree2)\n",
@@ -382,32 +261,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "23f8fc76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== State Distributions ===\n",
-      "\n",
-      "S1:\n",
-      "  (1,): P(0)=1.0000, P(1)=0.0000\n",
-      "  (0, 1): P(0)=1.0000, P(1)=0.0000\n",
-      "  (0, 0, 1): P(0)=1.0000, P(1)=0.0000\n",
-      "  (1, 0, 1): P(0)=1.0000, P(1)=0.0000\n",
-      "\n",
-      "S2:\n",
-      "  (0,): P(0)=0.4950, P(1)=0.5050\n",
-      "  (0, 0): P(0)=0.4843, P(1)=0.5157\n",
-      "  (1, 0): P(0)=0.5054, P(1)=0.4946\n",
-      "  (0, 0, 0): P(0)=0.4843, P(1)=0.5157\n",
-      "  (0, 1, 0): P(0)=0.5052, P(1)=0.4948\n",
-      "  (1, 0, 0): P(0)=0.4844, P(1)=0.5156\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Examine distributions in each state\n",
     "print(\"=== State Distributions ===\")\n",
@@ -430,27 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "50941c9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Inferred Machine ===\n",
-      "Number of states: 2\n",
-      "Expected entropy rate: 0.3333\n",
-      "\n",
-      "Transitions:\n",
-      "  State S1:\n",
-      "    --0 (p=1.000)--> S2\n",
-      "  State S2:\n",
-      "    --0 (p=0.495)--> S2\n",
-      "    --1 (p=0.505)--> S1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the full inference\n",
     "result = CSSR(config).infer(data)\n",
@@ -472,43 +312,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9bde2a5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Tracing Full CSSR Iteration ===\n",
-      "\n",
-      "Initial: 1 states\n",
-      "  Iter 1 after split: 2 states\n",
-      "  Iter 1 after merge: 2 states\n",
-      "    (0,): S0 -> S2\n",
-      "    (1,): S0 -> S1\n",
-      "    (0, 0): S0 -> S2\n",
-      "    (0, 1): S0 -> S1\n",
-      "    (1, 0): S0 -> S2\n",
-      "    (0, 0, 0): S0 -> S2\n",
-      "    (0, 0, 1): S0 -> S1\n",
-      "    (0, 1, 0): S0 -> S2\n",
-      "    (1, 0, 0): S0 -> S2\n",
-      "    (1, 0, 1): S0 -> S1\n",
-      "\n",
-      "  Iter 2 after split: 2 states\n",
-      "  Iter 2 after merge: 2 states\n",
-      "\n",
-      "Converged at iteration 2!\n",
-      "\n",
-      "Final partition: 2 states\n",
-      "\n",
-      "Final state assignments: 2 states\n",
-      "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Trace the full iteration loop\n",
     "print(\"=== Tracing Full CSSR Iteration ===\\n\")\n",
@@ -552,38 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9c47e466",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Distribution Comparison ===\n",
-      "\n",
-      "Empty history vs length-1 histories:\n",
-      "  (): P(0)=0.6645, P(1)=0.3355\n",
-      "  (0,): P(0)=0.4950, P(1)=0.5050\n",
-      "  (1,): P(0)=1.0000, P(1)=0.0000\n",
-      "\n",
-      "() reflects the STATIONARY distribution of the process\n",
-      "(0,) reflects the CONDITIONAL distribution given last symbol was 0\n",
-      "\n",
-      "For Golden Mean with p=0.5:\n",
-      "  Stationary: ~2/3 zeros, ~1/3 ones (because 1 must be followed by 0)\n",
-      "  After 0: ~50/50 (can emit either)\n",
-      "  After 1: 100% -> 0\n",
-      "\n",
-      "\n",
-      "=== Chi-squared test: () vs (0,) ===\n",
-      "(): {0: 13288, 1: 6710}\n",
-      "(0,): {0: 3288, 1: 3355}\n",
-      "\n",
-      "Do they differ (α=0.05)? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Diagnose: Why is () being split from the other \"ending in 0\" histories?\n",
     "print(\"=== Distribution Comparison ===\\n\")\n",
@@ -646,30 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "7358cf2d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Testing Fix: Exclude Empty History ===\n",
-      "\n",
-      "Initial (length >= 1 only): 1 states\n",
-      "  Histories: [(0,), (1,), (0, 0), (0, 1), (1, 0), (0, 0, 0), (0, 0, 1), (0, 1, 0), (1, 0, 0), (1, 0, 1)]\n",
-      "Iter 1: 2 states\n",
-      "Iter 2: 2 states\n",
-      "Converged!\n",
-      "\n",
-      "Final: 2 states (expected: 2)\n",
-      "\n",
-      "Final partition: 2 states\n",
-      "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test fix: Exclude empty history from partition\n",
     "print(\"=== Testing Fix: Exclude Empty History ===\\n\")\n",
@@ -722,18 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f9c4ad08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Expected entropy rate for Golden Mean (p=0.5): 0.6667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate expected entropy rate for Golden Mean\n",
     "# For Golden Mean with parameter p (prob of 1 after 0):\n",
@@ -754,30 +505,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7cdc5180",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "From inferred machine:\n",
-      "  State A (S2): P(1) = 0.5051\n",
-      "\n",
-      "Stationary distribution:\n",
-      "  pi_A = 0.6644\n",
-      "  pi_B = 0.3356\n",
-      "\n",
-      "State entropies:\n",
-      "  H(A) = 0.9999\n",
-      "  H(B) = 0.0000\n",
-      "\n",
-      "Manual entropy rate: 0.6644\n",
-      "Expected: 0.6667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Manual entropy rate calculation from the inferred machine\n",
     "# Entropy rate = sum over states: pi_s * H(P(·|s))\n",
@@ -828,23 +559,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "04f2bfdc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analysis summary:\n",
-      "  Entropy rate (from analyze): 0.6644\n",
-      "  Manual calculation: 0.6644\n",
-      "  Expected: 0.6667\n",
-      "  Number of states: 2\n",
-      "  Statistical complexity: 0.9205\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check what analyze() returns\n",
     "from emic.analysis import analyze\n",
@@ -880,31 +598,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "62bcd93d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Final Verification ===\n",
-      "\n",
-      "Number of states: 2 (expected: 2)\n",
-      "\n",
-      "Machine structure:\n",
-      "  S1:\n",
-      "    --0 (p=1.0000)--> S2\n",
-      "  S2:\n",
-      "    --0 (p=0.4949)--> S2\n",
-      "    --1 (p=0.5051)--> S1\n",
-      "\n",
-      "Entropy rate: 0.6644\n",
-      "Expected: 0.6667\n",
-      "Match: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Final verification: Run fresh CSSR inference with the fix\n",
     "# Reload modules to pick up the fix\n",
@@ -938,30 +635,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5931ffc0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Chi-Squared Comparisons (True = distributions DIFFER) ===\n",
-      "\n",
-      "Histories ending in 0 (should all be similar -> False):\n",
-      "  (0,) vs (1, 0): differ=False\n",
-      "  (0,) vs (0, 0): differ=False\n",
-      "  (1, 0) vs (0, 0): differ=False\n",
-      "\n",
-      "Histories ending in 1 (should all be similar -> False):\n",
-      "  (1,) vs (0, 1): differ=False\n",
-      "\n",
-      "Cross comparisons (should be True - different distributions):\n",
-      "  (0,) vs (1,): differ=True\n",
-      "  (0, 0) vs (0, 1): differ=True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Chi-squared comparisons using our implementation\n",
     "from emic.inference.cssr.tests import distributions_differ\n",
@@ -1010,46 +687,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e7bbc67a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Detailed Chi-Squared Tests ===\n",
-      "\n",
-      "(0,) vs (1, 0):\n",
-      "  (0,): {0: 3288, 1: 3355} (total: 6643)\n",
-      "  (1, 0): {0: 1696, 1: 1660} (total: 3356)\n",
-      "  Contingency table: [[3288, 1696], [3355, 1660]]\n",
-      "  Chi2=0.9246, p-value=0.336258, dof=1\n",
-      "  Same distribution (α=0.05)? True\n",
-      "\n",
-      "(0,) vs (0, 0):\n",
-      "  (0,): {0: 3288, 1: 3355} (total: 6643)\n",
-      "  (0, 0): {0: 1592, 1: 1695} (total: 3287)\n",
-      "  Contingency table: [[3288, 1592], [3355, 1695]]\n",
-      "  Chi2=0.9512, p-value=0.329421, dof=1\n",
-      "  Same distribution (α=0.05)? True\n",
-      "\n",
-      "(1, 0) vs (0, 0):\n",
-      "  (1, 0): {0: 1696, 1: 1660} (total: 3356)\n",
-      "  (0, 0): {0: 1592, 1: 1695} (total: 3287)\n",
-      "  Contingency table: [[1696, 1592], [1660, 1695]]\n",
-      "  Chi2=2.8548, p-value=0.091104, dof=1\n",
-      "  Same distribution (α=0.05)? True\n",
-      "\n",
-      "(1,) vs (0, 1):\n",
-      "  (1,): {0: 3356} (total: 3356)\n",
-      "  (0, 1): {0: 3355} (total: 3355)\n",
-      "  Contingency table: [[3356, 3355]]\n",
-      "  Chi2=0.0000, p-value=1.000000, dof=0\n",
-      "  Same distribution (α=0.05)? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Detailed chi-squared analysis using scipy\n",
     "from scipy import stats as scipy_stats\n",
@@ -1097,7 +738,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "emic",
    "language": "python",
    "name": "python3"
   },
